--- a/lib/web/templates/admin/zone/show.html.eex
+++ b/lib/web/templates/admin/zone/show.html.eex
@@ -30,6 +30,10 @@
               <th>Name</th>
               <td><%= @zone.name %></td>
             </tr>
+            <tr>
+              <th>Description</th>
+              <td><%= @zone.description %></td>
+            </tr>
           </table>
         </div>
       </div>
