Add ecologies to rooms
For changing the color in the in game map

--- a/lib/web/templates/admin/room/_form.html.eex
+++ b/lib/web/templates/admin/room/_form.html.eex
@@ -41,6 +41,12 @@
         <% end %>
         <%= error_tag f, :is_zone_exit %>
       </div>
+
+      <div class="form-group">
+        <%= label f, :ecology %>
+        <%= select f, :ecology, Room.ecologies(), class: "form-control" %>
+        <%= error_tag f, :ecology %>
+      </div>
     </div>
 
     <div class="box-footer">
