--- a/assets/app/css/app.css
+++ b/assets/app/css/app.css
@@ -70,3 +70,28 @@ input {
   color: #eee8d5;
   font-weight: bold;
 }
+
+.map-blue {
+  color: #005fd7;
+  font-weight: bold;
+}
+
+.map-brown {
+  color: #875f00;
+  font-weight: bold;
+}
+
+.map-dark-green {
+  color: #005f00;
+  font-weight: bold;
+}
+
+.map-green {
+  color: #00af00;
+  font-weight: bold;
+}
+
+.map-grey {
+  color: #9e9e9e;
+  font-weight: bold;
+}
