--- a/lib/web/templates/admin/dashboard/index.html.eex
+++ b/lib/web/templates/admin/dashboard/index.html.eex
@@ -52,6 +52,9 @@
       <div class="box">
         <div class="box-header">
           <h3 class="box-title">Currently Connected Players</h3>
+          <div class="box-tools">
+            <%= link("Disconnect Players", to: user_path(@conn, :disconnect), method: "post", class: "btn btn-warning") %>
+          </div>
         </div>
         <div class="box-body">
           <ul class="list-group">
