Start supporting the GMCP protocol
Pushes out Character name on login, and vitals on prompts and ticks.
Websocket client receives these as well and pushes them out.

--- a/lib/web/templates/play/show.html.eex
+++ b/lib/web/templates/play/show.html.eex
@@ -1,4 +1,6 @@
 <div class="panel">
   <pre><code id="terminal"></code></pre>
 </div>
-<input type="text" id="prompt" autofocus="autofocus" autocorrect="off" autocapitalize="off" spellcheck="false" />
+<div class="prompt">
+  <input type="text" id="prompt" autofocus="autofocus" autocorrect="off" autocapitalize="off" spellcheck="false" />
+</div>
