--- a/lib/web/templates/play/show.html.eex
+++ b/lib/web/templates/play/show.html.eex
@@ -3,9 +3,23 @@
 </div>
 <div class="prompt">
   <div class="stats">
-    <div id="health"></div>
-    <div id="skills"></div>
-    <div id="movement"></div>
+    <div id="health">
+      <div class="container">
+        <span class="stat"></span>
+      </div>
+    </div>
+
+    <div id="skills">
+      <div class="container">
+        <span class="stat"></span>
+      </div>
+    </div>
+
+    <div id="movement">
+      <div class="container">
+        <span class="stat"></span>
+      </div>
+    </div>
   </div>
   <input type="text" id="prompt" autofocus="autofocus" autocorrect="off" autocapitalize="off" spellcheck="false" />
 </div>
