--- a/assets/app/css/app.scss
+++ b/assets/app/css/app.scss
@@ -1,4 +1,5 @@
 /* This file is for your main application css. */
+@import "colors";
 
 body {
   margin: 0;
@@ -28,6 +29,8 @@ input {
 }
 
 @mixin stat-block {
+  background-color: $base2;
+  border: 2px solid $base2;
   display: inline-block;
   width: 32.7%;
   font-size: 1.25em;
@@ -52,8 +55,6 @@ input {
 
 #health {
   @include stat-block;
-  border: 2px solid #dc322f;
-
   .container {
     background: #dc322f;
     color: #fdf6e3;
@@ -62,8 +63,6 @@ input {
 
 #skills {
   @include stat-block;
-  border: 2px solid #859901;
-
   .container {
     background: #859901;
     color: #fdf6e3;
@@ -72,8 +71,6 @@ input {
 
 #movement {
   @include stat-block;
-  border: 2px solid #268bd2;
-
   .container {
     background: #268bd2;
     color: #fdf6e3;
@@ -100,37 +97,37 @@ input {
 }
 
 .red {
-  color: #dc322f;
+  color: $red;
   font-weight: bold;
 }
 
 .green {
-  color: #859901;
+  color: $green;
   font-weight: bold;
 }
 
 .yellow {
-  color: #b58901;
+  color: $yellow;
   font-weight: bold;
 }
 
 .blue {
-  color: #268bd2;
+  color: $blue;
   font-weight: bold;
 }
 
 .magenta {
-  color: #d33682;
+  color: $magenta;
   font-weight: bold;
 }
 
 .cyan {
-  color: #2aa198;
+  color: $cyan;
   font-weight: bold;
 }
 
 .white {
-  color: #eee8d5;
+  color: $base2;
   font-weight: bold;
 }
 
