--- a/assets/app/css/app.scss
+++ b/assets/app/css/app.scss
@@ -8,12 +8,53 @@ body {
 }
 
 .panel {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 80%;
+  height: 88%;
+  overflow: scroll;
+  border-right: 2px solid $base3;
+  border-bottom: 2px solid $base3;
+}
+
+.panel .container {
   padding-left: 10px;
   padding-right: 10px;
 }
 
+.prompt {
+  width: 100%;
+  height: 10%;
+  position: absolute;
+  bottom: 0;
+  left: 0;
+}
+
+.room-info {
+  background-color: $base3;
+  border-bottom: 2px solid $base3;
+  color: $base02;
+  font-size: 1.25em;
+  position: absolute;
+  top: 0;
+  right: 0;
+  width: 20%;
+  height: 88%;
+
+  .container {
+    padding-left: 15px;
+  }
+
+  ul {
+    list-style: none;
+    padding-left: 5px;
+  }
+}
+
 pre {
   font-size: 18px;
+  white-space: pre-wrap;
 }
 
 input {
@@ -51,7 +92,6 @@ input {
     }
   }
 }
-
 
 #health {
   @include stat-block;
