--- a/assets/app/css/app.scss
+++ b/assets/app/css/app.scss
@@ -5,6 +5,7 @@ body {
   margin: 0;
   background-color: #002833;
   color: #839496;
+  font-family: "Lucida Console", Monaco, monospace;
 }
 
 .panel {
@@ -55,8 +56,12 @@ body {
 }
 
 pre {
-  font-size: 18px;
+  font-size: 1.1em;
   white-space: pre-wrap;
+
+  code {
+    font-family: "Lucida Console", Monaco, monospace;
+  }
 }
 
 input {
@@ -75,8 +80,8 @@ input {
   background-color: $base2;
   border: 2px solid $base2;
   display: inline-block;
-  width: 32.7%;
-  font-size: 1.25em;
+  width: 32.5%;
+  font-size: 1.1em;
 
   .container {
     padding-top: 3px;
