--- a/lib/web/templates/play/show.html.eex
+++ b/lib/web/templates/play/show.html.eex
@@ -30,5 +30,7 @@
       </div>
     </div>
   </div>
-  <input type="text" id="prompt" autofocus="autofocus" autocorrect="off" autocapitalize="off" spellcheck="false" />
+  <div class="prompt-container">
+    <input type="text" id="prompt" autofocus="autofocus" autocorrect="off" autocapitalize="off" spellcheck="false" />
+  </div>
 </div>
