--- a/assets/app/css/app.scss
+++ b/assets/app/css/app.scss
@@ -26,10 +26,14 @@ body {
 
 .prompt {
   width: 100%;
-  height: 10%;
+  height: 12%;
   position: absolute;
   bottom: 0;
   left: 0;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
 }
 
 .room-info {
@@ -79,6 +83,7 @@ input {
 
 .stats {
   display: none;
+  width: 98%;
   margin-left: 1%;
   margin-right: 1%;
   flex-direction: row;
