Split the background percentage bar out from the text
Once the percentage bar got low enough it made the text bounce to a new
line and break the styling.

--- a/lib/web/templates/play/show.html.eex
+++ b/lib/web/templates/play/show.html.eex
@@ -15,18 +15,21 @@
 <div class="prompt">
   <div class="stats">
     <div id="health">
+      <div class="percentage"></div>
       <div class="container">
         <span class="stat"></span>
       </div>
     </div>
 
     <div id="skills">
+      <div class="percentage"></div>
       <div class="container">
         <span class="stat"></span>
       </div>
     </div>
 
     <div id="movement">
+      <div class="percentage"></div>
       <div class="container">
         <span class="stat"></span>
       </div>
