--- a/assets/app/css/app.scss
+++ b/assets/app/css/app.scss
@@ -119,14 +119,26 @@ input {
   background-color: $base2;
   border: 2px solid $base2;
   display: inline-block;
+  position: relative;
   font-size: 1.1em;
   flex: 1;
   margin-left: 3px;
   margin-right: 3px;
 
   .container {
+    position: relative;
     padding-top: 3px;
     padding-bottom: 3px;
+    z-index: 3;
+  }
+
+  .percentage {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    z-index: 2;
   }
 
   span {
@@ -143,24 +155,30 @@ input {
 #health {
   @include stat-block;
   .container {
-    background: #dc322f;
     color: #fdf6e3;
+  }
+  .percentage {
+    background: #dc322f;
   }
 }
 
 #skills {
   @include stat-block;
   .container {
-    background: #859901;
     color: #fdf6e3;
+  }
+  .percentage {
+    background: #859901;
   }
 }
 
 #movement {
   @include stat-block;
   .container {
-    background: #268bd2;
     color: #fdf6e3;
+  }
+  .percentage {
+    background: #268bd2;
   }
 }
 
