Add cost to items
To allow for any shop to buy items from players at the same price. Can
eventually be used as the starting price for purchase at shops.

--- a/lib/web/templates/admin/shop_item/_form.html.eex
+++ b/lib/web/templates/admin/shop_item/_form.html.eex
@@ -7,7 +7,7 @@
     <div class="box-body">
       <div class="form-group">
         <%= label :item, :id %>
-        <%= select :item, :id, @items |> Enum.map(&({&1.name, &1.id})), class: "form-control" %>
+        <%= select :item, :id, @items |> Enum.map(&item_option/1), class: "form-control" %>
       </div>
 
       <div class="form-group">
