--- a/lib/web/templates/admin/item/_form.html.eex
+++ b/lib/web/templates/admin/item/_form.html.eex
@@ -37,6 +37,12 @@
       </div>
 
       <div class="form-group">
+        <%= label f, :cost %>
+        <%= number_input f, :cost, class: "form-control" %>
+        <%= error_tag f, :cost %>
+      </div>
+
+      <div class="form-group">
         <%= label f, :stats %>
         <%= textarea f, :stats, value: @changeset |> json_field(:stats), class: "form-control", rows: 5 %>
         <%= error_tag f, :stats %>
