Sell items to a shop
You will get the cost back in currency

--- a/lib/web/templates/admin/item/show.html.eex
+++ b/lib/web/templates/admin/item/show.html.eex
@@ -34,6 +34,10 @@
                 <td><%= @item.drop_rate %>%</td>
               </tr>
               <tr>
+                <th>Cost</th>
+                <td><%= @item.cost %> <%= currency() %></td>
+              </tr>
+              <tr>
                 <th>Stats</th>
                 <td><pre><%= @item |> json_field(:stats) %></pre></td>
               </tr>
