Add the effects helper for skills

--- a/lib/web/templates/admin/skill/_form.html.eex
+++ b/lib/web/templates/admin/skill/_form.html.eex
@@ -52,6 +52,7 @@
         <%= textarea f, :effects, value: @changeset |> json_field(:effects), class: "form-control", rows: 15 %>
         <%= error_tag f, :effects %>
         <span class="help-block">Enter in valid JSON</span>
+        <%= render(SharedView, "_effects.html", id: "skill_effects") %>
       </div>
     </div>
 
