Item taggings can have a level which scale stats & effects

--- a/lib/web/templates/admin/item/show.html.eex
+++ b/lib/web/templates/admin/item/show.html.eex
@@ -67,6 +67,7 @@
               <tr>
                 <th>ID</th>
                 <th>Name</th>
+                <th>Level</th>
                 <th>Actions</th>
               </tr>
             </thead>
@@ -75,6 +76,7 @@
                 <tr>
                   <td><%= item_tagging.id %></td>
                   <td><%= link(item_tagging.item_tag.name, to: item_tag_path(@conn, :show, item_tagging.item_tag_id)) %></td>
+                  <td><%= item_tagging.level %></td>
                   <td>
                     <%= link(to: item_tagging_path(@conn, :delete, item_tagging.id), method: :delete) do %>
                       <i class="fa fa-times"></i>
