Move levels to items
Item tags still scale with levels, but the same level across all

--- a/lib/web/templates/admin/item/_form.html.eex
+++ b/lib/web/templates/admin/item/_form.html.eex
@@ -12,6 +12,12 @@
       </div>
 
       <div class="form-group">
+        <%= label f, :level %>
+        <%= number_input f, :level, class: "form-control" %>
+        <%= error_tag f, :level %>
+      </div>
+
+      <div class="form-group">
         <%= label f, :name %>
         <%= text_input f, :name, class: "form-control" %>
         <%= error_tag f, :name %>
