--- a/lib/web/templates/admin/npc/index.html.eex
+++ b/lib/web/templates/admin/npc/index.html.eex
@@ -28,6 +28,7 @@
               <tr>
                 <th>ID</th>
                 <th>Name</th>
+                <th>Tags</th>
                 <th>Actions</th>
               </tr>
             </thead>
@@ -36,6 +37,11 @@
                 <tr>
                   <td><%= npc.id %></td>
                   <td><%= npc.name %></td>
+                  <td>
+                    <%= Enum.map(npc.tags, fn (tag) -> %>
+                      <span class="label label-info"><%= tag %></span>
+                    <% end) %>
+                  </td>
                   <td>
                     <%= link("View", to: npc_path(@conn, :show, npc.id)) %>
                     <%= link("Edit", to: npc_path(@conn, :edit, npc.id)) %>
