--- a/lib/web/templates/admin/class/_form.html.eex
+++ b/lib/web/templates/admin/class/_form.html.eex
@@ -31,7 +31,7 @@
 
       <div class="form-group">
         <%= label f, :each_level_stats %>
-        <%= textarea f, :each_level_stats, value: @changeset |> json_field(:each_level_stats), class: "form-control", rows: 10 %>
+        <%= textarea f, :each_level_stats, value: @changeset |> each_level_stats(), class: "form-control", rows: 10 %>
         <%= error_tag f, :each_level_stats %>
       </div>
 
