Lower the font size of the map to work better on smaller monitors

--- a/assets/app/css/app.scss
+++ b/assets/app/css/app.scss
@@ -74,6 +74,13 @@ body {
 
     pre {
       white-space: pre;
+
+      @media only screen
+        and (min-device-width: 1200px)
+        and (max-device-width: 1600px)
+        and (-webkit-min-device-pixel-ratio: 1) {
+        font-size: 0.6em;
+      }
     }
   }
 
