Allow map layers
Think of them as layers and not a z index, to help split out separate
parts of the map. A house should only ever have the house show up on the
second floor

--- a/lib/web/templates/admin/room/_form.html.eex
+++ b/lib/web/templates/admin/room/_form.html.eex
@@ -25,14 +25,20 @@
 
       <div class="form-group">
         <%= label f, :x %>
-        <%= text_input f, :x, class: "form-control" %>
+        <%= number_input f, :x, class: "form-control" %>
         <%= error_tag f, :x %>
       </div>
 
       <div class="form-group">
         <%= label f, :y %>
-        <%= text_input f, :y, class: "form-control" %>
+        <%= number_input f, :y, class: "form-control" %>
         <%= error_tag f, :y %>
+      </div>
+
+      <div class="form-group">
+        <%= label f, :map_layer %>
+        <%= number_input f, :map_layer, class: "form-control" %>
+        <%= error_tag f, :map_layer %>
       </div>
 
       <div class="checkbox">
