Pass along the map layer to the new room form

--- a/lib/web/templates/admin/zone/show.html.eex
+++ b/lib/web/templates/admin/zone/show.html.eex
@@ -62,7 +62,7 @@
                     <%= Enum.map(map(@zone, layer: layer), fn (row) -> %>
                       <tr>
                         <%= Enum.map(row, fn ({{x, y}, nil}) -> %>
-                          <td><%= link("New Room", to: zone_room_path(@conn, :new, @zone.id, x: x, y: y), class: "btn btn-default") %></td>
+                          <td><%= link("New Room", to: zone_room_path(@conn, :new, @zone.id, x: x, y: y, map_layer: layer), class: "btn btn-default") %></td>
                         <% ({_, room}) -> %>
                           <td><%= link(room.name, to: room_path(@conn, :show, room.id), class: "btn #{room_color(room)}") %></td>
                         <% end) %>
